--- a/test/style.css
+++ b/test/style.css
@@ -1,35 +1,46 @@
-body{
-    background-color: #272727 !important;
-}
-h1{
+
+.loginheading{
     text-align: center;
     color: #FEE600;
-    margin-top: 10vh !important;
+    margin-top: 10vh ;
 }
 
-.container1{
-    width: 30% !important;
+.logincontainer{
+    width: 500px;
     margin: 10vh;
     border: 1px solid black;
-    height: 300px !important;
+    height: 300px;
     background-color: #FEE600;
 }
 
-#or{
+.or{
     margin-top: 4%;
     
 }
 
-form{
+.loginform{
     margin-top: 4rem;
 }
 
- #submit1{
+ .loginsubmit{
    
     width: 100px;
 }
 
-#submit2{
-    width: 100px;
-    
+
+@media screen and (max-width: 480px){
+    .logincontainer{
+        width: 250px;
+        height: 350px;
+    }
+
+    .or{
+        margin-left: 38%;
+    }
+    .loginform{
+        margin-top: 2rem;
+    }
+    .sgnpbtn{
+        margin-left: 25%;
+    }
 }
