--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -1,5 +1,5 @@
 .homecontainer {
-  width: 40vw !important;
+  width: 40vw;
   margin-top: 5rem;
 }
 
@@ -26,4 +26,11 @@
 .uname {
   width: 25%;
   color: #fee600;
+}
+
+@media screen and (max-width: 480px) {
+  .homecontainer {
+    width: 95%;
+    margin-top: 5rem;
+  }
 }
