--- a/test/stylehome.css
+++ b/test/stylehome.css
@@ -21,13 +21,20 @@ img{
     
 }
 
-.like{
-    width: 25%;
+.caption{
+    color: white;
+    text-align: left;
 }
 
-.like i{
+.like{
+    width: 50%;
+    
+}
+
+.like div{
     font-size: 1.5rem;
     color: #fee600;
+    
 }
 
 .uname{
