--- a/frontend/src/components/signup/SignUp.css
+++ b/frontend/src/components/signup/SignUp.css
@@ -1,39 +1,34 @@
+.shead {
+  text-align: center;
+  color: #fee600;
+  margin-top: 5%;
+}
+.signupcontainer {
+  width: 600px;
+  /* margin-top: 5%; */
+  border: 1px solid black;
+  background-color: #fee600;
+  /* margin-left: 37%; */
+}
 
-.shead{
+.signupsubmit {
+  margin-left: 14rem;
+}
+
+@media screen and (max-width: 480px) {
+  .shead {
     text-align: center;
-    color: #FEE600;
-    margin-top: 5%;
-}
-.signupcontainer{
-    width: 600px;
-    /* margin-top: 5%; */
+    color: #fee600;
+    margin-top: 18%;
+  }
+  .signupcontainer {
+    width: 300px;
+
     border: 1px solid black;
-    background-color: #FEE600;
-    /* margin-left: 37%; */
-} 
+    background-color: #fee600;
+  }
 
- .signupsubmit{
-    margin-left: 14rem ;
-}
-
-
-@media screen and (max-width: 480px){
-    .shead{
-        text-align: center;
-        color: #FEE600;
-        margin-top: 18%;
-    }
-    .signupcontainer{
-        width: 300px;
-        
-        border: 1px solid black;
-        background-color: #FEE600;
-        
-    } 
-
-    
- .signupsubmit{
-    margin-left: 4.5rem ;
-}
-
+  .signupsubmit {
+    margin-left: 4.5rem;
+  }
 }
