--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -43,6 +43,11 @@
   color: crimson;
 }
 
+.addpost-form{
+  margin-top:5em;
+}
+
+
 @media (min-width: 480px) and (max-width: 1025px) {
   .homecontainer {
     width: 95%;
