--- a/test/style.css
+++ b/test/style.css
@@ -1,46 +1,13 @@
-
-.loginheading{
-    text-align: center;
-    color: #FEE600;
-    margin-top: 10vh ;
-}
-
-.logincontainer{
-    width: 500px;
-    margin: 10vh;
-    border: 1px solid black;
-    height: 300px;
-    background-color: #FEE600;
-}
-
-.or{
-    margin-top: 4%;
-    
-}
-
-.loginform{
-    margin-top: 4rem;
-}
-
- .loginsubmit{
-   
-    width: 100px;
-}
-
-
-@media screen and (max-width: 480px){
-    .logincontainer{
-        width: 250px;
-        height: 350px;
-    }
-
-    .or{
-        margin-left: 38%;
-    }
-    .loginform{
-        margin-top: 2rem;
-    }
-    .sgnpbtn{
-        margin-left: 25%;
-    }
-}
+body {
+    background: #000000;
+    background: linear-gradient(to right, #000000, #000000);
+  }
+  
+  .btn-login {
+    font-size: 0.9rem;
+    letter-spacing: 0.05rem;
+    padding: 0.75rem 1rem;
+  }
+.card-body{
+    background-color: #ffbc00;
+}  
