--- a/frontend/src/components/utilities/Navbar.css
+++ b/frontend/src/components/utilities/Navbar.css
@@ -1,3 +1,8 @@
+.navbar{
+  transition-timing-function: ease-in;
+  transition-delay:10s;
+}
+
 .bg-trans {
   background-color: #121212ef !important;
 }
@@ -20,3 +25,62 @@
   font-size: 25px;
   padding: 10px;
 }
+
+
+.navi{
+  display: flex;
+  align-items: center;
+ flex-direction: column;
+  
+  
+}
+
+
+.nav-name{
+ display: none;
+  padding: 0;
+  margin: 0;
+ }
+
+
+ 
+ i:hover{
+   transition: ease-in-out;
+   transition-delay: 0.1s;
+   transform: scale(1.7);
+ }
+
+@media  (max-width:420px) {
+
+  .navi{
+    display: flex;
+    align-items: center;
+   flex-direction: row;
+    
+    
+  }
+  .nav-name{
+    display: flex;
+    margin: auto;
+    font-size: 20px;
+    color: #ffc107;
+   }
+}
+
+@media  (max-width:800px) {
+
+  .navi{
+    display: flex;
+    align-items: center;
+   flex-direction: row;
+    
+    
+  }
+  .nav-name{
+    display: flex;
+    margin: auto;
+    font-size: 20px;
+    color: #ffc107;
+   }
+}
+
